tests/positive/exceptions/catch_float_division/input.ci
void main() {
    try {
        float x = 1.0 / 0.0;
        print("unreachable\n");
    } catch (RuntimeException e) {
        print("caught: " + e.message + "\n");
    }
    print("done\n");
}
