tests/negative/runtime/arraypop_empty_string/input.ci
void main() {
    string[] xs = [];
    print(arrayPop(xs) + "\n");
}
